# libsddc

./: .gitignore  CMakeLists.txt  README.md
firmware/: LICENSE
include/: CMakeLists.txt  libsddc.h
misc/: 99-sddc.rules
src/: CMakeLists.txt  libsddc.c  sddc_stream_test.c  sddc_test.c  sddc_vhf_stream_test.c  streaming.c  streaming.h  usb_device.c  usb_device.h  usb_device_internals.h
